Toevoegen basic layout, container, nav op juiste plaats, lettertype, kleuren nav

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,42 @@
-.nav-room-left {
-    margin-left: 14em;
+@import "header";
+
+
+
+
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
+.container {
+    width: 70%;
+}
+
+
+
+
+.red {
+
+    border: 1px solid red;
+
+}
+
+
+.blue {
+
+  border: 1px solid blue;
+
+}
+
+
+.yellow {
+
+  border: 1px solid yellow;
+
+}
+
+
+.float-right {
+    text-align: right;
+
 }
