--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,37 @@
 .nav-room-left {
-  margin-left: 14em; }
+  margin-left: 10em; }
+
+.nav-room-between {
+  margin-left: 12em; }
+
+.top-nav {
+  font-size: 0.75em; }
+
+.nav li {
+  border-right: 1px solid #06137b; }
+  .nav li a {
+    color: #06137b; }
+    .nav li a:hover, .nav li a:focus {
+      color: #0c20c5; }
+    .nav li a:active {
+      font-weight: bold; }
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
+
+.container {
+  width: 70%; }
+
+.red {
+  border: 1px solid red; }
+
+.blue {
+  border: 1px solid blue; }
+
+.yellow {
+  border: 1px solid yellow; }
+
+.float-right {
+  text-align: right; }
 
 /*# sourceMappingURL=style.css.map */
