--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,56 @@
 .nav-room-left {
-  margin-left: 10em; }
-
-.nav-room-between {
-  margin-left: 12em; }
+  margin-left: 8em; }
 
 .top-nav {
-  font-size: 0.75em; }
+  font-size: 0.68em; }
+
+.top-nav-menu {
+  padding-top: 12px;
+  padding-bottom: 12px; }
+
+.nav-top-middle {
+  padding-left: 14px; }
+
+.nav-top-middle-text {
+  padding-left: 21px; }
 
 .nav li {
-  border-right: 1px solid #06137b; }
+  border-right: 1px solid #06137b;
+  width: 100px; }
+  .nav li #watchlist {
+    width: 11px;
+    height: 10.5px;
+    background: url("../images/nav-footer-icons.svg") -29px -1.5px;
+    margin-top: 3px; }
+  .nav li #profile {
+    width: 13px;
+    height: 13.8px;
+    background: url("../images/nav-footer-icons.svg") -42px 0;
+    margin-top: 1px; }
+  .nav li .nav-icons {
+    float: left; }
   .nav li a {
-    color: #06137b; }
-    .nav li a:hover, .nav li a:focus {
+    color: #06137b;
+    padding: 0;
+    padding-left: 21px; }
+    .nav li a:hover {
       color: #0c20c5; }
-    .nav li a:active {
+    .nav li a:active, .nav li a:focus {
       font-weight: bold; }
+
+.nav li:last-child {
+  border: none; }
+  .nav li:last-child a:last-child {
+    padding-left: 13px; }
+
+.float-right {
+  text-align: right; }
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 .container {
-  width: 70%; }
+  width: 65%; }
 
 .red {
   border: 1px solid red; }
@@ -30,8 +60,5 @@ body {
 
 .yellow {
   border: 1px solid yellow; }
-
-.float-right {
-  text-align: right; }
 
 /*# sourceMappingURL=style.css.map */
