--- a/css/_header.scss
+++ b/css/_header.scss
@@ -18,15 +18,6 @@ $font-small: 0.68em;
 }
 
 
-.nav-top-middle{
-    padding-left: 14px;
-}
-
-.nav-top-middle-text {
-    padding-left: 21px;
-}
-
-
 .nav {
    li {
 
@@ -85,8 +76,33 @@ $font-small: 0.68em;
 }
 
 
+.nav-top-middle{
+    padding-left: 14px;
+}
 
-.float-right {
-    text-align: right;
+.nav-top-middle-text {
+    padding-left: 21px;
+}
+
+
+
+
+.searchbar {
+text-align: right;
+
+    input {
+    width: 80%;
+    font-size: 1.2em;
+    padding: 3px 0 3px 17px;
+    margin-top: 6px;
+    border: 1px solid #cbcbcb;
+    border-radius: 4px;
+    }
+
+    ::placeholder { /* Most modern browsers support this now. */
+      color:    #525151;
+      font-style: italic;
+    }
+
 
 }
