--- a/css/style.scss
+++ b/css/style.scss
@@ -1,10 +1,12 @@
 @import "header";
 
+$font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 
 
 
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: $font;
 }
 
 
