--- a/css/_header.scss
+++ b/css/_header.scss
@@ -181,6 +181,29 @@ text-align: right;
 
 
 .languages {
-    text-align: right;
-    font-size: $font-small;
+text-align: right;
+font-size: 0.8em;
+font-weight: 600;
+
+  p {
+
+    margin-bottom: 0;
+    margin-top: 10px;
+
+        a {
+        color: $primary-color;
+        text-decoration: none;
+        margin-left: 10%;
+
+            &:hover {
+            color: $hover-color;
+            }
+
+            &:active, &:focus {
+            font-weight: bold;
+            }
+        }
+
+    }
+
 }
