--- a/css/style.scss
+++ b/css/style.scss
@@ -11,13 +11,11 @@ body {
 }
 
 
-.container {
-    width: 72%;
-}
 
 
 
 
+/*
 .red {
 
     border: 1px solid red;
@@ -36,4 +34,4 @@ body {
 
   border: 1px solid yellow;
 
-}
+}*/
