--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
-/*.nav-room-left {
-    margin-left: 7em;
-}*/
+/* Naviagtion Logo */
+.logo-space {
+  position: relative; }
+
+.logo-top {
+  position: absolute;
+  margin-left: 10%;
+  margin-top: -18px;
+  z-index: 1; }
+
 /***  Navigation top part  ****/
 /* Menu */
 .container-nav-top {
@@ -9,8 +16,8 @@
 .top-nav {
   font-size: 0.72em;
   font-weight: 600;
-  width: 72%;
-  margin-left: 22em; }
+  width: 75%;
+  margin-left: 18.6%; }
 
 .top-nav-menu {
   padding: 12px 0 12px 12px; }
@@ -43,7 +50,7 @@
   border: none; }
 
 .nav-top-middle {
-  padding-left: 18px; }
+  padding-left: 1.7em; }
 
 /* Searchbar */
 .searchbar {
@@ -56,7 +63,6 @@
     border: 1px solid #cbcbcb;
     border-radius: 4px; }
   .searchbar ::placeholder {
-    /* Most modern browsers support this now. */
     color: #525151;
     font-style: italic; }
   .searchbar button {
@@ -74,24 +80,24 @@
 .bottom-nav {
   font-size: 0.9em;
   font-weight: 700;
-  width: 72%;
-  margin-left: 17.6em; }
+  width: 75%;
+  margin-left: 18.6%; }
 
 .bottom-nav-menu {
   padding: 9px 0 9px 12px; }
 
 .nav li.nav-item-bottom {
-  padding-left: 5%; }
+  margin-left: 5%; }
   .nav li.nav-item-bottom a {
     color: #4f4f4f;
     padding: 0; }
     .nav li.nav-item-bottom a:hover {
-      color: #0c20c5; }
+      color: #2c2b2b; }
     .nav li.nav-item-bottom a:active, .nav li.nav-item-bottom a:focus {
       font-weight: bold; }
 
 .nav li.nav-item-bottom:first-child {
-  padding-left: 0; }
+  margin-left: 0; }
 
 .languages {
   text-align: right;
@@ -113,8 +119,7 @@ body {
   font-family: "Open Sans", sans-serif;
   border-top: 4px solid #01a7a7; }
 
-/*
-.red {
+/*.red {
 
     border: 1px solid red;
 
