--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,4 @@
-@import "header";
+@import "partials/header";
 
 $font:'Open Sans', sans-serif;
 
@@ -12,26 +12,26 @@ body {
 
 
 
+/***** HOME *****/
 
 
 
+/* Slider top */
 
-/*.red {
-
-    border: 1px solid red;
-
+/*aantal zaken aanpassen in bootstrap prev, next icons voor eigen controls */
+.carousel-control-prev-icon {
+    width: 37px;
+    height: 70px;
+    background: url('../images/pijltjes-slider.png') 37px 0;
 }
 
 
-.blue {
-
-  border: 1px solid blue;
-
+.carousel-control-next-icon {
+    @extend .carousel-control-prev-icon;
+    background: url('../images/pijltjes-slider.png');
 }
 
 
-.yellow {
-
-  border: 1px solid yellow;
-
-}*/
+.carousel-control-prev, .carousel-control-next {
+    width: inherit;//ipv grote blok a, a dezelfde breedte als controls --> zo komen ze automatisch aan de zijkanten van de slider
+}
