--- a/css/style.css
+++ b/css/style.css
@@ -175,8 +175,14 @@ body {
     margin-bottom: 0; }
 
 /*** INFO KOLOMMEN ***/
+.home-info-title {
+  text-align: center;
+  color: #06137b;
+  margin: 1.3em auto 0 auto; }
+
 .home-info-col {
-  padding: 3.5em; }
+  padding-top: 2.9em;
+  padding-bottom: 2.9em; }
   .home-info-col img {
     display: block;
     margin: 0 auto; }
