--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,6 @@
     height: 13.8px;
     background: url("../images/nav-footer-icons.svg") 14px 0;
     margin-top: 1px; }
-  .nav li.nav-item-top .nav-icons {
-    float: left; }
   .nav li.nav-item-top a {
     color: #06137b;
     padding: 0;
@@ -175,7 +173,7 @@ body {
     margin-bottom: 0; }
 
 /*** INFO KOLOMMEN ***/
-.home-info-title, .container-carousel .home-carousel-title {
+.home-info-title {
   text-align: center;
   color: #06137b;
   margin: 1.3em auto 0 auto;
@@ -197,6 +195,27 @@ body {
   background-color: #f3f3f3; }
   .container-carousel .home-carousel-title {
     margin-top: 0;
-    margin-bottom: 1.3em; }
+    margin-bottom: 1.3em;
+    text-align: center; }
+    .container-carousel .home-carousel-title h2 {
+      color: #06137b; }
+  .container-carousel #more-arrow {
+    width: 28px;
+    height: 28px;
+    background: url("../images/carousel-pijltjes.png") -1px -1px;
+    margin-left: 12px;
+    margin-bottom: 0.7em; }
+
+/***  positioning elements  ***/
+.display-inline, img.display-inline {
+  display: inline-block; }
+
+.float {
+  float: left; }
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table; }
 
 /*# sourceMappingURL=style.css.map */
