--- a/css/style.css
+++ b/css/style.css
@@ -215,17 +215,68 @@ body {
     }*/ }
 
 /* mosaic */
-.grid {
+/*.grid-item {
+  width: 33%;
+  float:left;
+}
+
+.mozaik-left-top {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+
+  .overlay-1 img {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    width: 33%;
+    left: 16.5%;
+    margin-top:90px;
+  }
+}
+
+.mozaik-left-top:hover .overlay {
+  opacity: 1;
+}*/
+.mozaik {
   margin-bottom: 2.7em; }
 
-.grid-item {
-  width: 33%;
-  float: left; }
-
-.grid-item:last-child {
+.mozaik-image:last-child {
   margin-top: 9px; }
 
-.grid-item--width2 {
+.mozaik-image {
+  width: 33%;
+  float: left; }
+  .mozaik-image .position {
+    position: relative;
+    overflow: hidden; }
+    .mozaik-image .position img {
+      position: relative; }
+    .mozaik-image .position .overlay {
+      background-color: rgba(82, 81, 81, 0.61);
+      opacity: 0;
+      transition: all .4s ease-in-out;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0; }
+      .mozaik-image .position .overlay a img {
+        width: 50%; }
+
+.mozaik-image:hover .position .overlay {
+  opacity: 1; }
+
+.mozaik-item-width2 {
   width: 66%;
   float: right; }
 
@@ -240,5 +291,20 @@ body {
   content: "";
   clear: both;
   display: table; }
+
+.flex-center {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 100%; }
 
 /*# sourceMappingURL=style.css.map */
