Toegevoegd voorlopige switch state pijltje mozaik titel

--- a/css/style.css
+++ b/css/style.css
@@ -201,53 +201,18 @@ body {
   text-align: center; }
   .home-carousel-title h2 {
     color: #06137b; }
-  .home-carousel-title #more-arrow {
-    width: 28px;
-    height: 28px;
-    background: url("../images/carousel-pijltjes.png");
-    margin-bottom: 0.7em; }
   .home-carousel-title .more-arrow-link {
-    margin-left: 12px;
-    /*@if (a.more-arrow-link:active, a.more-arrow-link:hover) {
-      #more-arrow {
-        background: url('../images/carousel-pijltjes.png') 27px 0;
-      }
-    }*/ }
+    margin-left: 12px; }
+    .home-carousel-title .more-arrow-link #more-arrow {
+      width: 28px;
+      height: 28px;
+      background: url("../images/carousel-pijltjes.png");
+      margin-bottom: 0.7em; }
 
-/* mosaic */
-/*.grid-item {
-  width: 33%;
-  float:left;
-}
+.more-arrow-link:active #more-arrow, .more-arrow-link:focus #more-arrow {
+  background: url("../images/carousel-pijltjes.png") 27px 0; }
 
-.mozaik-left-top {
-  position: relative;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-
-  .overlay-1 img {
-    position: absolute;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    width: 33%;
-    left: 16.5%;
-    margin-top:90px;
-  }
-}
-
-.mozaik-left-top:hover .overlay {
-  opacity: 1;
-}*/
+/*** Mosaic images ***/
 .mozaik {
   margin-bottom: 2.7em; }
 
