--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 /***  Navigation top part  ****/
 /* Menu */
-.container-nav-top, .container-nav-bottom, .container-carousel {
+.container-nav-top, .container-nav-bottom, .container-mozaik {
   width: 100%; }
 
 .top-nav {
@@ -75,7 +75,7 @@
       padding-bottom: 3px; }
 
 /***  Navigation bottom part  ***/
-.container-nav-bottom, .container-carousel {
+.container-nav-bottom, .container-mozaik {
   background-color: #eaeaea; }
 
 .bottom-nav {
@@ -119,6 +119,15 @@
         color: #0c20c5; }
       .languages p a:active, .languages p a:focus {
         font-weight: bold; }
+
+.container-footer {
+  width: 100%;
+  padding-top: 2em;
+  padding-bottom: 1em;
+  border-top: 1px solid #eaeaea; }
+
+.padding-0 {
+  padding: 0; }
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -179,36 +188,38 @@ body {
   margin: 1.3em auto 0 auto;
   font-weight: 400; }
 
-.home-info-col, .container-carousel {
+.home-info-col, .container-mozaik {
   padding-top: 2.9em;
   padding-bottom: 2.9em; }
-  .home-info-col img, .container-carousel img {
+  .home-info-col img, .container-mozaik img {
     display: block;
     margin: 0 auto; }
-  .home-info-col p, .container-carousel p, .home-info-col h4, .container-carousel h4 {
+  .home-info-col p, .container-mozaik p, .home-info-col h4, .container-mozaik h4 {
     text-align: center; }
-  .home-info-col h4, .container-carousel h4 {
+  .home-info-col h4, .container-mozaik h4 {
     margin-top: 1.5em; }
 
 /*** CAROUSEL ***/
-.container-carousel {
-  background-color: #f3f3f3; }
+.container-mozaik {
+  background-color: #f3f3f3;
+  margin-bottom: 5em; }
 
 /*  title */
-.home-carousel-title {
+.home-mozaik-title {
   margin-top: 0;
   margin-bottom: 1.3em;
   text-align: center; }
-  .home-carousel-title h2 {
+  .home-mozaik-title h2 {
     color: #06137b; }
-  .home-carousel-title .more-arrow-link {
+  .home-mozaik-title .more-arrow-link {
     margin-left: 12px; }
-    .home-carousel-title .more-arrow-link #more-arrow {
+    .home-mozaik-title .more-arrow-link #more-arrow {
       width: 28px;
       height: 28px;
       background: url("../images/carousel-pijltjes.png");
       margin-bottom: 0.7em; }
 
+/* voorlopig, is beter in js */
 .more-arrow-link:active #more-arrow, .more-arrow-link:focus #more-arrow {
   background: url("../images/carousel-pijltjes.png") 27px 0; }
 
