--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
 @import "partials/header";
+@import "partials/footer";
 
 $font:'Open Sans', sans-serif;
 $container-width: 70%;
@@ -140,16 +141,17 @@ padding-bottom: 2.9em;
 
 /*** CAROUSEL ***/
 
-.container-carousel {
+.container-mozaik {
 @extend .container-nav-bottom;
 @extend .home-info-col;
 background-color: #f3f3f3;
+margin-bottom: 5em;
 
 }
 
 /*  title */
 
-.home-carousel-title {
+.home-mozaik-title {
 margin-top: 0;
 margin-bottom: 1.3em;
 text-align: center;
@@ -175,7 +177,7 @@ text-align: center;
 
 }
 
-
+/* voorlopig, is beter in js */
 .more-arrow-link:active, .more-arrow-link:focus {
 
   #more-arrow {
