--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,7 @@ $container-width: 70%;
 $primary-color: #06137b;
 $secondary-color-dark: #4f4f4f;
 $secondary-color-light: #fff;
+$link-color: #00ada7;
 $hover-color: #0c20c5;
 $hover-color-nav: #2c2b2b;
 $font-small: 0.72em;
@@ -18,6 +19,10 @@ body {
     font-family: $font;
     border-top: 4px solid #01a7a7;
     color: $secondary-color-dark;
+}
+
+a, a:hover, a:active, a:focus {
+  color: $link-color;
 }
 
 
