--- a/css/partials/_footer.scss
+++ b/css/partials/_footer.scss
@@ -13,6 +13,10 @@
     padding-top: 2em;
 }
 
+.footer .col:last-child {
+  border-left: 1px solid #eaeaea;
+}
+
 
 .footer-title {
   font-size: 1.2em;
