--- a/css/style.scss
+++ b/css/style.scss
@@ -18,6 +18,7 @@ $font-medium-large: 0.9em;
 body {
     font-family: $font;
     border-top: 4px solid #01a7a7;
+    border-bottom: 4px solid #01a6a0;
     color: $secondary-color-dark;
 }
 
@@ -235,6 +236,14 @@ text-align: center;
 
     }
   }
+}
+
+
+.mozaik-image:nth-child(2) .position .overlay {
+    a img {
+      width: 100%
+    }
+
 }
 
 
